# transaction-processor

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  models.rs  processor.rs
test_cases/: expected_multiple_users_all_types_of_transactions.csv  expected_single_client_deposits_and_withdrawals.csv  expected_single_client_dispute.csv  expected_single_client_dispute_resolved.csv  multiple_users_all_types_of_transactions.csv  precision_check.csv  single_client_deposits.csv  single_client_deposits_and_withdrawals.csv  single_client_dispute.csv  single_client_dispute_chargeback.csv  single_client_dispute_resolved.csv
tests/: process_transactions_tests.rs
