[package]
name = "transaction-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
boolinator = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
csv = "1"
itertools = "0.13"
thiserror = "1.0.63"
simple-logging = "2"
log = "0.4.22"